# asr-bench

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  asr_bench.py  asr_compare.py  build_rttm_from_vtt.py  hf_runner.py  nemo_runner.py  pyproject.toml  requirements.txt  setup_hf_venv.ps1  setup_nemo_venv.ps1  setup_whisperx_venv.ps1  whisperx_runner.py
docs/superpowers/plans/: 2026-05-30-nim-engine-support.md  2026-06-01-metrics-and-fusion.md  2026-06-04-whisperx-diarization.md  2026-06-05-json-results-sidecar.md  2026-06-06-asr-compare-subcommand.md  2026-06-06-cer-median-latency.md  2026-06-07-hallucination-detection.md  (+3 more)
engines/: __init__.py  base.py  faster_whisper.py  hf.py  nemo.py  nim.py  whisperx.py
test-corpus/: ITM310 002 - Spring 2026 Week 14 - Friday_Captions_English (United States).txt  ITM310 002 - Spring 2026 Week 14 - Wednesday_Captions_English (United States).txt  ITM310 002 - Spring 2026 Week 15 - Friday_Captions_English (United States).txt  ITM310 002 - Spring 2026 Week 15 - Wednesday_Captions_English (United States).txt  ITM310 002 - Spring 2026 Week 16 - Friday_Captions_English (United States).txt  ITM310 002 - Spring 2026 Week 16 - Wednesday_Captions_English (United States).txt  ITM310 003 - Spring 2026 Week 14 - Friday_Captions_English (United States).txt  ITM310 003 - Spring 2026 Week 14 - Wednesday_Captions_English (United States).txt  ITM310 003 - Spring 2026 Week 15 - Friday_Captions_English (United States).txt  ITM310 003 - Spring 2026 Week 15 - Wednesday_Captions_English (United States).txt  ITM310 003 - Spring 2026 Week 16 - Friday_Captions_English (United States) (1).txt  ITM310 003 - Spring 2026 Week 16 - Wednesday_Captions_English (United States).txt  README.md
tests/: conftest.py  test_cli.py  test_compare.py  test_context.py  test_cue_parsing.py  test_decode.py  test_distil_model.py  test_engine_contract.py  test_engines_package.py  test_fusion.py  test_hf_engine.py  test_hf_models.py  test_hf_runner.py  test_llm_backends.py  test_metrics.py  test_nemo_adapter.py  test_nemo_engine.py  test_nemo_resolve.py  test_nemo_result.py  test_nemo_runner.py  test_nim_helpers.py  test_packaging.py  test_prepare_gold.py  test_registry.py  test_render.py  test_resolve.py  test_results_json.py  test_smoke.py  test_vram_sampler.py  test_whisperx_adapter.py  test_whisperx_engine.py  test_whisperx_resolve.py  test_whisperx_result.py  test_whisperx_runner.py  test_whisperx_vtt.py  test_windowing.py
(+10 files in other folders)
